# kafkey-api

./: .gitignore  Cargo.toml  Dockerfile  IAM_IMPLEMENTATION_SUMMARY.md  IAM_README.md  README.md  README_IAM.md  TASKS.md  diesel.toml  docker-compose.yml  example.env
.github/workflows/: ci.yml
docs/: API.md  API_ADDITION.md  DATABASE.md  DIAGRAMS.md
examples/: basic_usage.rs  iam_setup.rs
src/: lib.rs  main.rs
src/api/: mod.rs
src/api/axum_http/: axum_router.rs  default_routers.rs  dtos.rs  mod.rs  response_utils.rs
src/api/axum_http/extractors/: mod.rs  validated_json.rs
src/api/axum_http/middleware/: auth_guards.rs  auth_middleware.rs  csrf_middleware.rs  mod.rs  rate_limit_middleware.rs  request_id.rs  tenant_context.rs  tenant_rate_limiter.rs
src/api/axum_http/routers/: api_key.rs  auth.rs  authentication.rs  csrf.rs  mod.rs  oauth2.rs  permissions.rs  roles.rs  tenant.rs  tenant_admin.rs  users.rs  webhook.rs
src/api/handlers/: oauth2.rs
src/api/iam/handlers/: auth.rs  permission.rs  role.rs  user.rs
src/api/iam/middleware/: auth_middleware.rs  mod.rs  permission_middleware.rs
src/api/iam/routes/: auth_routes.rs  mod.rs  permission_routes.rs  role_routes.rs  user_routes.rs
src/application/dtos/: auth.rs  common.rs  mod.rs  permission.rs  role.rs  tenant_dtos.rs  user.rs  webhook.rs
src/application/use_cases/: api_key.rs  audit.rs  auth.rs  auth_use_cases.rs  mod.rs  oauth2.rs  permissions.rs  roles.rs  tenant.rs  tenant_admin.rs  users.rs  webhook.rs
src/application/use_cases/iam/: auth_use_cases.rs  mod.rs  permission_use_cases.rs  role_use_cases.rs  user_use_cases.rs
src/application/use_cases/tests/: audit_tests.rs  auth_tests.rs  helpers.rs  mocks.rs  mod.rs  (+4 more)
src/config/: config_loader.rs  config_model.rs
src/domain/entities/: api_key.rs  audit_log.rs  blacklisted_token.rs  mod.rs  permission.rs  role.rs  role_permission.rs  tenant.rs  tenant_admin.rs  tenant_settings.rs  user.rs  user_role.rs  user_social_account.rs  webhook.rs
src/domain/repositories/: api_key_repository.rs  audit_repository.rs  blacklist_repository.rs  mod.rs  permission_repository.rs  role_repository.rs  tenant_admin_repository.rs  tenant_repository.rs  tenant_settings_repository.rs  user_repository.rs  user_social_account_repository.rs  webhook_repository.rs
src/presentation/axum_http/: axum_router.rs
src/services/: api_key_service.rs  jwt_service.rs  mod.rs  oauth2_service.rs  password_service.rs  totp_service.rs  webhook_service.rs
src/services/iam/: mod.rs  permission_service_impl.rs  role_service_impl.rs  user_service_impl.rs
(+81 files in other folders)
