[package]
name = "kafkey-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
diesel = { version = "2.3.4", features = ["postgres"] }
dotenvy = "0.15.7"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.7", features = ["full"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
