[package]
name = "kafkey-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.7"
diesel = { version = "2.2.1", features = ["postgres", "chrono", "uuid"] }
diesel-async = { version = "0.5.2", features = ["postgres", "bb8"] }
dotenvy = "0.15.7"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.7", features = ["full"] }
tower = "0.4.13"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing = "0.1.40"
bcrypt = "0.17.1"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
jsonwebtoken = "9.3.0"
futures = "0.3.31"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
async-trait = "0.1.80"

[[example]]
name = "iam_setup"
path = "examples/iam_setup.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"
```

The error was caused by a stray backtick (`) character after the UUID dependency.
