[package]
name = "kafkey-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.7"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.3.4", features = [
    "postgres",
    "serde_json",
    "chrono",
    "r2d2",
    "uuid",
] }
dotenvy = "0.15.7"
jsonwebtoken = "9.2"
argon2 = "0.5.3"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["serde", "v4"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.7", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
totp-rs = { version = "5.7.0", features = ["qr"] }
base32 = "0.4.0"
rand = "0.8.5"
axum-extra = { version = "0.10", features = ["cookie"] }
validator = { version = "0.19", features = ["derive"] }
moka = { version = "0.12", features = ["future"] }
axum-prometheus = "0.10.0"
sentry = { version = "0.36", features = ["tower-axum-matched-path"] }
sentry-tracing = "0.36"
sentry-tower = "0.36"
